# teamcoders

./: Dockerfile  README.md  pyproject.toml  requirements.txt
output/: app.py  cuentas.py  cuentas.py_design.md  test.py_design.md  test_cuentas.py
src/teamcoders/: crew.py  main.py
src/teamcoders/config/: agents.yaml  tasks.yaml
