[project]
name = "teamcoders"
version = "0.1.0"
description = "TeamCoders using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
teamcoders = "teamcoders.main:run"
run_crew = "teamcoders.main:run"
train = "teamcoders.main:train"
replay = "teamcoders.main:replay"
test = "teamcoders.main:test"
run_with_trigger = "teamcoders.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
